(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|
(library
 (name Jose)
 (public_name jose)
 (libraries astring eqaf yojson mirage-crypto mirage-crypto-pk x509 base64 zarith)
 |} ^ preprocess ^ {|)
|}
